--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,7 @@ main:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+admin_area:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /admin
