--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,3 +2,13 @@
 # http://symfony.com/doc/current/service_container.html
 parameters:
 #    parameter_name: value
+
+services:
+
+#FosUserBundle
+    #User
+    admin.tag:
+          class: MainBundle\Admin\UserAdmin
+          arguments: [~, MainBundle\Entity\User, ~]
+          tags:
+              - { name: sonata.admin, manager_type: orm, group: User info, label: User }
