--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,6 +5,10 @@ main:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+
 admin_area:
     resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
     prefix: /admin
