--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -103,6 +103,9 @@ sonata_block:
         sonata.admin.block.admin_list:
             contexts: [admin]
         # ...
+sonata_admin:
+    security:
+        handler: sonata.admin.security.handler.role
 
 # KNPMenuBundle Configuration
 knp_menu:
