--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,9 +14,12 @@ security:
                 - ROLE_SONATA_ADMIN_DEMO_MODERATOR_DELETE
                 - ROLE_SONATA_ADMIN_DEMO_MODERATOR_EXPORT
 
-            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_MODERATOR_READER, ROLE_SONATA_MODERATOR_EDITOR]
             ROLE_ADMIN:       ROLE_USER
+            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_MODERATOR_ACTION]
             ROLE_SUPER_ADMIN: ROLE_ADMIN
+
+    access_decision_manager:
+            strategy: unanimous
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
@@ -66,6 +69,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/, role: ROLE_MODERATOR }
         - { path: ^/admin/, role: ROLE_ADMIN }
 
 #instruction - http://symfony.com/doc/current/reference/configuration/security.html
