--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,17 +5,31 @@ parameters:
 
 services:
 
-#FOSUserBundle
-#Registration
+# FOSUserBundle.
+    # Registration.
     app.form.registration:
         class: MainBundle\Forms\FOSUserBundle\FormRegistrationType
         tags:
             - { name: form.type, alias: app_user_registration }
 
-# SonataAdminBundle - add User.
-    #User
+# SonataAdminBundle.
+    # User.
     admin.user:
           class: MainBundle\Admin\UserAdmin
           arguments: [~, MainBundle\Entity\User, ~]
           tags:
               - { name: sonata.admin, manager_type: orm, group: User info, label: User }
+
+    # Category.
+    admin.category:
+            class: MainBundle\Admin\CategoryAdmin
+            arguments: [~, MainBundle\Entity\Category, ~]
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: Post info,  label: Category }
+
+    # Tag.
+    admin.tag:
+            class: MainBundle\Admin\TagAdmin
+            arguments: [~, MainBundle\Entity\Tag, ~]
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: Post info,  label: Tag }
