--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,19 +4,19 @@ security:
 
     role_hierarchy:
             # for convenience, I decided to gather Sonata roles here
-            ROLE_SONATA_MODERATOR_READER:
-                - ROLE_SONATA_ADMIN_DEMO_MODERATOR_LIST
-                - ROLE_SONATA_ADMIN_DEMO_MODERATOR_VIEW
-            ROLE_SONATA_MODERATOR_EDITOR:
-                - ROLE_SONATA_ADMIN_DEMO_MODERATOR_CREATE
-                - ROLE_SONATA_ADMIN_DEMO_MODERATOR_EDIT
-            ROLE_SONATA_MODERATOR_ADMIN:
-                - ROLE_SONATA_ADMIN_DEMO_MODERATOR_DELETE
-                - ROLE_SONATA_ADMIN_DEMO_MODERATOR_EXPORT
+            ROLE_SONATA_FOO_READER:
+                - ROLE_SONATA_ADMIN_DEMO_FOO_LIST
+                - ROLE_SONATA_ADMIN_DEMO_FOO_VIEW
+            ROLE_SONATA_FOO_EDITOR:
+                - ROLE_SONATA_ADMIN_DEMO_FOO_CREATE
+                - ROLE_SONATA_ADMIN_DEMO_FOO_EDIT
+            ROLE_SONATA_FOO_ADMIN:
+                - ROLE_SONATA_ADMIN_DEMO_FOO_DELETE
+                - ROLE_SONATA_ADMIN_DEMO_FOO_EXPORT
 
             ROLE_ADMIN:       ROLE_USER
-            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_MODERATOR_ACTION]
-            ROLE_SUPER_ADMIN: ROLE_ADMIN
+            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_FOO_ACTION]
+            ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_MODERATOR]
 
     access_decision_manager:
             strategy: unanimous
@@ -70,6 +70,5 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_MODERATOR }
-        - { path: ^/admin/, role: ROLE_ADMIN }
 
 #instruction - http://symfony.com/doc/current/reference/configuration/security.html
