--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,18 +4,20 @@ security:
 
     role_hierarchy:
             # for convenience, I decided to gather Sonata roles here
-            ROLE_SONATA_FOO_READER:
-                - ROLE_SONATA_ADMIN_DEMO_FOO_LIST
-                - ROLE_SONATA_ADMIN_DEMO_FOO_VIEW
-            ROLE_SONATA_FOO_EDITOR:
-                - ROLE_SONATA_ADMIN_DEMO_FOO_CREATE
-                - ROLE_SONATA_ADMIN_DEMO_FOO_EDIT
-            ROLE_SONATA_FOO_ADMIN:
-                - ROLE_SONATA_ADMIN_DEMO_FOO_DELETE
-                - ROLE_SONATA_ADMIN_DEMO_FOO_EXPORT
+            # https://sonata-project.org/bundles/admin/master/doc/reference/security.html#id1
+            # task-1002 - add all Role for User - Moderator.
+            ROLE_SONATA_MODERATOR_READER:
+                - ROLE_APP_ADMIN_USER_LIST
+#                - ROLE_APP_ADMIN_USER_VIEW
+            ROLE_SONATA_MODERATOR_EDITOR:
+#                - ROLE_APP_ADMIN_USER_CREATE
+#                - ROLE_APP_ADMIN_USER_EDIT
+            ROLE_SONATA_MODERATOR_ADMIN:
+#                - ROLE_APP_ADMIN_USER_DELETE
+#                - ROLE_APP_ADMIN_USER_EXPORT
 
             ROLE_ADMIN:       ROLE_USER
-            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_FOO_ACTION]
+            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_MODERATOR_READER, ROLE_SONATA_MODERATOR_EDITOR, ROLE_SONATA_MODERATOR_ADMIN]
             ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_MODERATOR]
 
     access_decision_manager:
