--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,6 +12,12 @@ services:
         tags:
             - { name: form.type, alias: app_user_registration }
 
+    # Edit.
+    app.form.edit:
+        class: MainBundle\Forms\FOSUserBundle\FormEditType
+        tags:
+            - { name: form.type, alias: app_user_edit }
+
 # SonataAdminBundle - add User.
     # User
     app.admin.user:
