--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     "knplabs/knp-components": "^1.3",
     "knplabs/knp-menu-bundle": "^2.0",
     "whiteoctober/breadcrumbs-bundle": "^1.2",
-    "friendsofsymfony/elastica-bundle": "^3.2"
+    "friendsofsymfony/elastica-bundle": "^3.2",
+    "fzaninotto/faker": "^1.6"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
