add functional for blor landing and internal pages

--- a/src/MainBundle/Resources/config/routing.yml
+++ b/src/MainBundle/Resources/config/routing.yml
@@ -5,3 +5,9 @@ home:
 blog:
     path: /blog
     defaults: { _controller: MainBundle:Main:blog }
+
+blog-post:
+    path:     /blog/post/{id}/{shortTitle}
+    defaults: { _controller: MainBundle:Main:blogInternal }
+    requirements:
+      id: \d+
