add all categories in blog page, and add internall for all cat.

--- a/src/MainBundle/Resources/config/routing.yml
+++ b/src/MainBundle/Resources/config/routing.yml
@@ -11,3 +11,9 @@ blog-post:
     defaults: { _controller: MainBundle:Main:blogInternal }
     requirements:
       id: \d+
+
+category:
+    path:     /blog/category/{id}/{name}
+    defaults: { _controller: MainBundle:Main:showInternalCategory }
+    requirements:
+      id: \d+
