--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,6 +7,7 @@ security:
             # https://sonata-project.org/bundles/admin/master/doc/reference/security.html#id1
             # task-1002 - add all Role for User - Moderator.
             # Example ROLE_APP_ADMIN_CATEGORY_LIST - "ROLE"."APP_ADMIN_CATEGORY = app.admin.category (in service.yml)"."LIST- action"
+
             ROLE_SONATA_MODERATOR_READER:
                 - ROLE_APP_ADMIN_USER_LIST
 #                - ROLE_APP_ADMIN_USER_VIEW
@@ -37,8 +38,8 @@ security:
 #                - ROLE_APP_ADMIN_USER_DELETE
 #                - ROLE_APP_ADMIN_USER_EXPORT
 
-            ROLE_ADMIN:       ROLE_USER
-            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_MODERATOR_READER, ROLE_SONATA_MODERATOR_EDITOR, ROLE_SONATA_MODERATOR_ADMIN]
+            ROLE_ADMIN:       [ROLE_USER]
+            ROLE_MODERATOR:   [ROLE_USER, ROLE_SONATA_MODERATOR_READER, ROLE_SONATA_MODERATOR_EDITOR]
             ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_MODERATOR]
 
     access_decision_manager:
