--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "knplabs/knp-menu-bundle": "^2.0",
     "whiteoctober/breadcrumbs-bundle": "^1.2",
     "friendsofsymfony/elastica-bundle": "^3.2",
-    "fzaninotto/faker": "^1.6"
+    "fzaninotto/faker": "^1.6",
+    "gedmo/doctrine-extensions": "^2.4"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
