--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,8 +60,18 @@ doctrine:
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
+
+        mappings:
+            translatable:
+                type: annotation
+                alias: Gedmo
+                prefix: Gedmo\Translatable\Entity
+                # make sure vendor library location is correct
+                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+
+
 
 # Swiftmailer Configuration
 swiftmailer:
