--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   },
   "require": {
-    "php": ">=5.5.8",
+    "php": ">=5.6",
     "symfony/symfony": "3.2.*",
     "doctrine/orm": "^2.5",
     "doctrine/doctrine-bundle": "^1.6",
@@ -37,7 +37,7 @@
     "whiteoctober/breadcrumbs-bundle": "^1.2",
     "friendsofsymfony/elastica-bundle": "^3.2",
     "fzaninotto/faker": "^1.6",
-    "gedmo/doctrine-extensions": "dev-master"
+    "stof/doctrine-extensions-bundle": "^1.2"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
