--- a/src/MainBundle/Resources/config/routing.yml
+++ b/src/MainBundle/Resources/config/routing.yml
@@ -6,6 +6,11 @@ blog:
     path: /blog
     defaults: { _controller: MainBundle:Blog:blog }
 
+
+shop:
+    path: /shop
+    defaults: { _controller: MainBundle:Shop:shop }
+
 blog-post:
     path:     /blog/post/{id}/{shortTitle}
     defaults: { _controller: MainBundle:Blog:blogInternal }
