--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "whiteoctober/breadcrumbs-bundle": "^1.2",
     "friendsofsymfony/elastica-bundle": "^3.2",
     "fzaninotto/faker": "^1.6",
-    "stof/doctrine-extensions-bundle": "^1.2"
+    "stof/doctrine-extensions-bundle": "^1.2",
+    "sonata-project/media-bundle": "^3.5"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
