--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "friendsofsymfony/elastica-bundle": "^3.2",
     "fzaninotto/faker": "^1.6",
     "stof/doctrine-extensions-bundle": "^1.2",
-    "sonata-project/media-bundle": "^3.5"
+    "sonata-project/media-bundle": "^3.5",
+    "sensiolabs/ansi-to-html": "^1.1"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
