Add Search folders.

--- a/src/MainBundle/Resources/config/routing.yml
+++ b/src/MainBundle/Resources/config/routing.yml
@@ -6,6 +6,9 @@ blog:
     path: /blog
     defaults: { _controller: MainBundle:Blog:blog }
 
+search:
+    path: /search
+    defaults: { _controller: MainBundle:Search:index }
 
 product:
     path: /shop
