--- a/src/MainBundle/Resources/config/routing.yml
+++ b/src/MainBundle/Resources/config/routing.yml
@@ -10,6 +10,10 @@ search:
     path: /search
     defaults: { _controller: MainBundle:Search:index }
 
+search_query:
+    path: /search/{query}
+    defaults: { _controller: MainBundle:Search:index }
+
 product:
     path: /shop
     defaults: { _controller: MainBundle:Product:Product }
